Switch autoArchive default to false
